[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_dev_abi'
version = '2.8.1'

[dependencies]
anyhow = '1.0'
byteorder = '1.3.2'
chrono = '0.4.9'
hex = '0.3.2'
num-bigint = '0.4'
num-traits = '0.2'
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
thiserror = '1.0'
ton_dev_block = { git = 'https://github.com/ton-dev-dao/ton-dev-block.git', tag = '1.11.20' }

[dev-dependencies]
pretty_assertions = '1.3'

